# libsoundio

./: .gitignore  .gitmodules  CMakeLists.txt  common.h
example/: sio_sine.c
logger/: logger.h  logger.hpp
soundio/: soundio.h
src/: channel_layout.c  channel_layout.cpp  config.h.in  coreaudio.c  coreaudio.cpp  coreaudio.h  coreaudio_ios.h  coreaudio_ios.m  coreaudio_ios.mm  dummy.c  dummy.cpp  dummy.h  oboe.c  oboe.cpp  oboe.h  oboe_callback.cpp  oboe_callback.h  oc_method_swizzling.h  oc_method_swizzling.mm  os.c  os.cpp  os.h  ring_buffer.c  ring_buffer.cpp  ring_buffer.h  soundio.c  soundio.cpp  soundio_private.h  util.cpp  util.h  wasapi.c  wasapi.cpp  wasapi.h
